r394:    * Reverted the change to make debian/README be treated as README.Debian,      after I learned people use it for eg, documenting the source package      itself. Closes: #34628, since it seems this is not such an "incredibly      minor" change after all. Never underetimate the annoyance of      backwards-compatability.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.2.1) unstable; urgency=low
+
+  * Reverted the change to make debian/README be treated as README.Debian,
+    after I learned people use it for eg, documenting the source package
+    itself. Closes: #34628, since it seems this is not such an "incredibly
+    minor" change after all. Never underetimate the annoyance of
+    backwards-compatability.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 27 Nov 2000 12:01:52 -0800
+
 debhelper (2.2.0) unstable; urgency=low
 
   * DH_COMPAT=3 now enables the following new features which I can't just
