r395:    * dh_makeshlibs: corrected the evil db3-regex so it doesn't misfire on      data like "debian/libruby/usr/lib/ruby/1.6/i486-linux/etc.so".      Closes: #78139

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.2.2) unstable; urgency=low
+
+  * dh_makeshlibs: corrected the evil db3-regex so it doesn't misfire on
+    data like "debian/libruby/usr/lib/ruby/1.6/i486-linux/etc.so".
+    Closes: #78139
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 27 Nov 2000 12:21:53 -0800
+
 debhelper (2.2.1) unstable; urgency=low
 
   * Reverted the change to make debian/README be treated as README.Debian,
