--- a/debhelper.1
+++ b/debhelper.1
@@ -50,6 +50,11 @@ In some rare cases, you may want to have different versions of these files
 for different architectures. If files named debian/<package>.foo.<arch>
 exist, where <arch> is the same as the output of "dpkg --print-architecture",
 then they will be used in preference to other, more general files.
+.P
+In many cases, these config files are used to specify various types of
+files. Documentation or example files to install, files to move, and so on.
+When appropriate, in cases like these, you can use standard shell wildcard
+characters ("?" and "*") in the files.
 .SH "SHARED DEBHELPER OPTIONS"
 The following command line options are supported by all debhelper programs.
 .TP
