--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -12,10 +12,9 @@ everything into debian/tmp, and you need to break that up into subpackages.
 .P
 Files named debian/package.files list the files to be moved, separated by
 whitespace. The filenames listed should be relative to debian/tmp/. You can
-also list directory names, and the whole directory will be moved. You can
-even use wildcards if you like. If you prefer, you can list the files to
-move on the command line and this will apply to the first package
-dh_movefiles is told to act on.
+also list directory names, and the whole directory will be moved. If you
+prefer, you can list the files to move on the command line and this will
+apply to the first package dh_movefiles is told to act on.
 .SH OPTIONS
 .TP
 .B debhelper options
