--- a/debhelper.1
+++ b/debhelper.1
@@ -54,7 +54,7 @@ then they will be used in preference to other, more general files.
 In many cases, these config files are used to specify various types of
 files. Documentation or example files to install, files to move, and so on.
 When appropriate, in cases like these, you can use standard shell wildcard
-characters ("?" and "*") in the files.
+characters ('?' and '*') in the files.
 .SH "SHARED DEBHELPER OPTIONS"
 The following command line options are supported by all debhelper programs.
 .TP
