r399:    * dh_movefiles: added error message on file not found

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.4) unstable; urgency=low
+
+  * dh_movefiles: added error message on file not found
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 29 Nov 2000 20:25:52 -0800
+
 debhelper (2.2.3) unstable; urgency=low
 
   * If DH_COMPAT=3 is set, the following happens:
