r400:    * Oops, it was not expanding wildcard when it should.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.5) unstable; urgency=low
+
+  * Oops, it was not expanding wildcard when it should.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 29 Nov 2000 20:59:33 -0800
+
 debhelper (2.2.4) unstable; urgency=low
 
   * dh_movefiles: added error message on file not found
