--- a/debhelper.1
+++ b/debhelper.1
@@ -5,7 +5,7 @@ debhelper \- overview of the debhelper commands
 .B dh_*
 .I "[-v] [-a] [-i] [-s] [--no-act] [-ppackage] [-Npackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
-Debhelper is used to help you build a debian package. The philospohy behind
+Debhelper is used to help you build a debian package. The philosophy behind
 debhelper is to provide a collection of small, simple, and easily
 understood tools that are used in debian/rules to automate various common
 aspects of building a package. This means less work for you, the packager.
