--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.6) unstable; urgency=low
+
+  * typo: Closes, #78567
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  2 Dec 2000 14:27:31 -0800
+
 debhelper (2.2.5) unstable; urgency=low
 
   * Oops, it was not expanding wildcard when it should.
