--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -30,7 +30,7 @@ debian/package.TODO can be used to specify files for subpackages.
 Files named debian/package.docs can list other files to be installed.
 .P
 This program will automatically generate postinst and prerm commands to
-maintain a compatability symlink, /usr/doc/package, to the documentation in
+maintain a compatibility symlink, /usr/doc/package, to the documentation in
 /usr/share/doc/package. See
 .BR dh_installdeb (1)
 for an explanation of how this works.
