--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.7) unstable; urgency=low
+
+  * Spelling patch.
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  3 Dec 2000 17:12:15 -0800
+
 debhelper (2.2.6) unstable; urgency=low
 
   * typo: Closes, #78567
