r403:    * dh_installwm: Moved update-alternatives --remove call to prerm,      Closes: #80209    * ALso guarded all update-alternatives --remove calls.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.2.8) unstable; urgency=medium
+
+  * dh_installwm: Moved update-alternatives --remove call to prerm, 
+    Closes: #80209
+  * ALso guarded all update-alternatives --remove calls.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2000 11:33:30 -0800
+
 debhelper (2.2.7) unstable; urgency=low
 
   * Spelling patch.
