--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.9) unstable; urgency=low
+
+  * Fixed perl wanring, Closes: #80242
+
+ -- Joey Hess <joey@kitenet.net>  Thu, 21 Dec 2000 14:43:11 -0800
+
 debhelper (2.2.8) unstable; urgency=medium
 
   * dh_installwm: Moved update-alternatives --remove call to prerm, 
