--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.10) unstable; urgency=low
+
+  * dh_shlibdeps: re-enabled -l flag, it's needed again. Closes: #80560
+
+ -- Joey Hess <joey@kitenet.net>  Tue, 26 Dec 2000 22:05:30 -0800
+
 debhelper (2.2.9) unstable; urgency=low
 
   * Fixed perl wanring, Closes: #80242
