--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.11) unstable; urgency=medium
+
+  * Fixed dh_installwm. Oops. Closes: #81124 
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  3 Jan 2001 10:18:38 -0800
+
 debhelper (2.2.10) unstable; urgency=low
 
   * dh_shlibdeps: re-enabled -l flag, it's needed again. Closes: #80560
