--- a/doc/TODO
+++ b/doc/TODO
@@ -49,4 +49,4 @@ Deprecated:
   see what other switches are not being used, and maybe remove some of
   them. I'd also like to depercate/remove debian/compress files, -X is
   a better idea.
-
+* dh_suidmanager. Once nothing in the archive uses it.
