--- a/dh_suidregister.1
+++ b/dh_suidregister.1
@@ -1,61 +1,29 @@
 .TH DH_SUIDREGISTER 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_suidregister \- set up package to register files with suidregister
+dh_suidregister \- obsolete suid registration program
 .SH SYNOPSIS
-.B dh_suidregister
-.I "[debhelper options] [-A] [file ...]"
+Do not run
 .SH "DESCRIPTION"
-dh_suidregister is a debhelper program that is responsible for modifying the
-postinst and postrm scripts of a package so the package will register files
-with
+This program used to register suid and sgid files with 
 .BR suidregister (1)
-when it is installed.
+, but with the introduction of
+.BR dpkg-statoverride (8)
+, registration of files in this way is unnecessary, and even harmful, so 
+this program no longer does anything, and you can remove it from any rules
+file that uses it.
 .P
-Any filenames specified as parameters will be registered in the first
-package dh_suidregister is told to act on. By default, this is the first
-binary package in debian/control, but if you use -p, -i, or -a flags,
-it will be the first package specified by those flags.
+If your package registered things with suidregister before, you need to
+make sure that you add a versioned conflict, as follows:
+  Conflicts: suidmanager (<< 0.50)
 .P
-Files named debian/package.suid can list other files to be registered.
-.P
-If neither of these methods is used to specify files, dh_suidregister will
-scan the package build directory for files that have suid permissions, and
-will automatically register all files it finds.
-.P
-Note that this program modifies your postinst and postrm files. See
-.BR dh_installdeb (1)
-for an explanation of how this works.
-.P
-Also note that all files registered by this program will *not* be suid in the
-resulting .deb file. The postinst of the package will set their permissions
-(even if the user doesn't have suidmanager installed).
-.SH OPTIONS
-.TP
-.B debhelper options
-See
-.BR debhelper (1)
-for a list of options common to all debhelper commands.
-.TP
-.B \-A, \--all
-Register any files specified by command line parameters in ALL packages
-acted on. I doubt anyone will find this useful, it's here for consitency
-with other debhelper programs.
-.TP
-.B file ...
-Register these files in the first package acted on. (Or in all packages if
--A is specified.)
-.SH NOTES
-dh_suidregister does not make anything suid. It merely records the
-permissions binaries already have. If you need to make something suid, you
-must do so manually before calling dh_suidregister.
-.SH ENVIRONMENT
-See
-.BR debhelper (1)
-for a list of environment variables that affect all debhelper commands.
+This is not done automatically. If your program did not previously use
+suidregister, you do not have to add the conflict.
 .SH "SEE ALSO"
 .TP
 .BR debhelper (1)
 .TP
 .BR suidregister (8)
+.TP
+.BR dpkg-statoverride (8)
 .SH AUTHOR
 Joey Hess <joeyh@debian.org>
