r408:    * Fixed a man page typo, Closes: #82371:    * Added note to dh_strip man page, Closes: #82220

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.2.13) unstable; urgency=medium
+
+  * Fixed a man page typo, Closes: #82371:
+  * Added note to dh_strip man page, Closes: #82220
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 15 Jan 2001 20:38:53 -0800
+
 debhelper (2.2.12) unstable; urgency=medium
 
   * suidmanager is obsolete now, and so is dh_suidmanager. Instead,
