--- a/dh_strip.1
+++ b/dh_strip.1
@@ -26,6 +26,9 @@ things to exclude.
 See
 .BR debhelper (1)
 for a list of environment variables that affect all debhelper commands.
+.SH NOTES
+If the DEB_BUILD_OPTIONS environement variable contains "nostrip", nothing
+will be stripped, in accordance with Debian policy.
 .SH "SEE ALSO"
 .BR debhelper (1)
 .SH "CONFORMS TO"
