r409:    * Corrected globbing issue with dh_movefiles in v3 mode. Closes: #81431

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.14) unstable; urgency=medium
+
+  * Corrected globbing issue with dh_movefiles in v3 mode. Closes: #81431
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2001 18:33:59 -0800
+
 debhelper (2.2.13) unstable; urgency=medium
 
   * Fixed a man page typo, Closes: #82371:
