r410:    * Added the ability to make debhelper read a different file than      debian/control as the control file. This is very useful for various and      sundry things, all Evil, most involving kernel packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.2.15) unstable; urgency=medium
+
+  * Added the ability to make debhelper read a different file than
+    debian/control as the control file. This is very useful for various and
+    sundry things, all Evil, most involving kernel packages.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 24 Jan 2001 17:33:46 -0800
+
 debhelper (2.2.14) unstable; urgency=medium
 
   * Corrected globbing issue with dh_movefiles in v3 mode. Closes: #81431
