r412:    * Bah, reverted that last change. It isn't useful because      dpkg-buildpackage reads the real control file and gets confused.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.2.16) unstable; urgency=medium
+
+  * Bah, reverted that last change. It isn't useful because
+    dpkg-buildpackage reads the real control file and gets confused.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 28 Jan 2001 01:47:46 -0800
+
 debhelper (2.2.15) unstable; urgency=medium
 
   * Added the ability to make debhelper read a different file than
