r413:    * dh_installdebconf: marge in templates with a .ll_LL extention,      they were previously ignored.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.2.17) unstable; urgency=medium
+
+  * dh_installdebconf: marge in templates with a .ll_LL extention,
+    they were previously ignored.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 29 Jan 2001 13:05:21 -0800
+
 debhelper (2.2.16) unstable; urgency=medium
 
   * Bah, reverted that last change. It isn't useful because
