--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.2.18) unstable; urgency=medium
+
+  * Added a suggests to debconf-utils, Closes: #83643
+    I may chenge this to a dependancy at some point in the future,
+    since one debconf command needs the package to work.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 30 Jan 2001 22:39:54 -0800
+
 debhelper (2.2.17) unstable; urgency=medium
 
   * dh_installdebconf: marge in templates with a .ll_LL extention,
