r415:    * dh_shlibdeps -l can handle relative paths now. Patch from Colin Watson      <cjw44@flatline.org.uk>, Closes: #84408

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.2.19) unstable; urgency=low
+
+  * dh_shlibdeps -l can handle relative paths now. Patch from Colin Watson
+    <cjw44@flatline.org.uk>, Closes: #84408
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  1 Feb 2001 13:35:39 -0800
+
 debhelper (2.2.18) unstable; urgency=medium
 
   * Added a suggests to debconf-utils, Closes: #83643
