r417:    * dh_installinit -r: stop init script in prerm on package removal,      Closes: #84974

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.2.20) unstable; urgency=low
+
+  * dh_installinit -r: stop init script in prerm on package removal,
+    Closes: #84974
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  5 Feb 2001 10:06:31 -0800
+
 debhelper (2.2.19) unstable; urgency=low
 
   * dh_shlibdeps -l can handle relative paths now. Patch from Colin Watson
