r418:    * Fixed a stupid typo in dh_suidregister, Closes: #85110

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.2.21) unstable; urgency=low
+
+  * Fixed a stupid typo in dh_suidregister, Closes: #85110
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  6 Feb 2001 13:29:57 -0800
+
 debhelper (2.2.20) unstable; urgency=low
 
   * dh_installinit -r: stop init script in prerm on package removal,
