--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,46 @@
+debhelper (3.0.0) unstable; urgency=low
+
+  * The "Does this version number frighten you?" release.
+  * Added dh_installman, a new program that replaces dh_installmanpages.
+    It is not DWIM. You tell it what to install and it figures out where 
+    based on .TH section field and filename extention. I reccommend everyone
+    begin using it, since this is much better then dh_installmanpages's
+    evilness. I've been meaning to do this for a very long time..
+    Closes: #38673, #53964, #64297, #16933, #17061, #54059, #54373, #61816
+  * dh_installmanpages remains in the package for backwards compatability,
+    but is mildly deprecated.
+  * dh_testversion is deprecated; use build dependancies instead.
+  * Since dh_debstd requires dh_installmanpages (where do you think the
+    latter's evil interface came from?), I have removed it. It was a nice
+    thought-toy, but nobody really used it, right?
+  * Since the from-debstd document walks the maintainer through running
+    dh_debstd to get a list of debhelper commands, and since that document
+    has really outlives its usefullness, I removed it too. Use dh-make
+    instead.
+  * dh_installman installs only into /usr/share/man, not the X11R6
+    directory. Policy says "files must not be installed into
+    `/usr/X11R6/bin/', `/usr/X11R6/lib/', or `/usr/X11R6/man/' unless this
+    is necessary for the package to operate properly", and I really doubt
+    a man page being in /usr/share/man is going to break many programs.
+    Closes: #81853 (I hope the bug submitter doesn't care that
+    dh_installmanpages still puts stuff in the X11R6/man directory.)
+  * Since with the fixing of the man page installer issue, my checklist for
+    debhelper v3 is complete, I pronounce debhelper v3 done! Revved the
+    version number appropriatly (a large jump; v3 changes less than I had
+    planned).
+  * Tonnes of changes here and there to mark v3 as done. I don't have a
+    v4 planned at this time. All the big changes are done.
+  * Updated to current perl coding standards (use strict; -w; lower-case
+    variable names). No perl-5.6isms though.
+*** to make the version number a little more justified, turn on 'use
+strict' throughout.. --- DONE up to dh_perl, not including it****
+*** move man pages into programs as pod docs ***
+*** add something to allow specification of the options each program takes,
+make them ignore other options, and be able to display usage help ***
+*** fix aj's bug, sigh ***
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  8 Feb 2001 14:29:58 -0800
+
 debhelper (2.2.21) unstable; urgency=low
 
   * Fixed a stupid typo in dh_suidregister, Closes: #85110
