--- a/dh_testversion.1
+++ b/dh_testversion.1
@@ -4,8 +4,7 @@ dh_testversion \- ensure that the correct version of debhelper is installed
 .SH SYNOPSIS
 .B dh_testversion [debhelper options] [operator] [version]
 .SH "DESCRIPTION"
-Note: This program is rapidly becoming obsolete. Soon you will be able to
-use build dependencies instead.
+Note: This program is deprecated. You should use build dependencies instead.
 .P
 dh_testversion compares the version of debhelper against the version you
 specify, and if the condition is not met, exits with an error message.
