--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (3.0.0) unstable; urgency=low
 
-  * The "Does this version number frighten you?" release.
+  * The "Does the version number frighten you?" release.
   * Added dh_installman, a new program that replaces dh_installmanpages.
     It is not DWIM. You tell it what to install and it figures out where 
     based on .TH section field and filename extention. I reccommend everyone
@@ -30,13 +30,9 @@ debhelper (3.0.0) unstable; urgency=low
     planned).
   * Tonnes of changes here and there to mark v3 as done. I don't have a
     v4 planned at this time. All the big changes are done.
-  * Updated to current perl coding standards (use strict; -w; lower-case
+  * Updated to current perl coding standards (use strict, lower-case
     variable names). No perl-5.6isms though.
-*** to make the version number a little more justified, turn on 'use
-strict' throughout.. --- DONE up to dh_perl, not including it****
 *** move man pages into programs as pod docs ***
-*** add something to allow specification of the options each program takes,
-make them ignore other options, and be able to display usage help ***
 *** fix aj's bug, sigh ***
 
  -- Joey Hess <joeyh@debian.org>  Thu,  8 Feb 2001 14:29:58 -0800
