--- a/dh_installman.1
+++ b/dh_installman.1
@@ -7,7 +7,7 @@ dh_installman \- install man pages into package build directories
 .SH "DESCRIPTION"
 dh_installman is a debhelper program that is responsible for installing
 man pages into the correct locations in package build directories. You tell
-it what man pages go in your package(s), and it figure out where to install
+it what man pages go in your package(s), and it figures out where to install
 them based on the section field in their .TH line and their filename
 extention.
 .P
