--- a/doc/TODO
+++ b/doc/TODO
@@ -68,7 +68,7 @@ Deprecated:
   see what other switches are not being used, and maybe remove some of
   them. I'd also like to depercate/remove debian/compress files, -X is
   a better idea.
-* dh_suidmanager. Once nothing in the archive uses it.
+* dh_suidregister. Once nothing in the archive uses it.
 * dh_installmanpages. Only mildly deprecated right now. Once dh_installman
   catches on, make it emit a warning, and then wait for it to go away.
 * dh_testversion. Only mildly deprecated right now. Make it emit a warning
